--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <script src="main.js"></script>
+    <script src="build/main.js"></script>
   </head>
   <body>
     <h1>Erdös Renyi Graph Generation</h1>
